# DataMiningAssignment1

./: .gitignore  README.md  pyproject.toml
data/processed/: cleaned.csv  features_sequential.npz  task4_predictions.npz
notebooks/: 1a_eda.ipynb  1b_cleaning.ipynb  1c_features.ipynb  2a_classification.ipynb  4_regression.ipynb  5_evaluation.ipynb
src/: features.py  models.py  preprocessing.py  utils.py
